--- a/aboutcode.html
+++ b/aboutcode.html
@@ -166,7 +166,11 @@ li > ul > li {
           </ul>
         </li>
         <li>有害な誤情報または暴力の是認 <span class="breadcrumb">前にもあったため省略します</span></li>
-        <li>なりすまし、欺瞞、詐欺 <span class="breadcrumb">使わないので省略</span></li>
+        <li>なりすまし、欺瞞、詐欺 <span class="breadcrumb">従業員サポートエージェントのなりすまし行為 3, 61, 100, 140</span></li>
+        <li>なりすまし、欺瞞、詐欺 <span class="breadcrumb">知人のなりすまし行為　3, 61, 100, 137</span></li>
+        <li>なりすまし、欺瞞、詐欺 <span class="breadcrumb">セレブ公人のなりすまし行為　3, 61, 100, 138</span></li>
+        <li>なりすまし、欺瞞、詐欺 <span class="breadcrumb">ビジネスのなりすまし行為 3, 61, 100, 139</span></li>
+        <li>なりすまし、欺瞞、詐欺 <span class="breadcrumb">詐欺または詐称 3, 61, 100, 141</span></li>
         <li>盗まれたアカウントやクレジットカードを配っている <span class="breadcrumb">breadcrumbs: [3, 61, 102]</span></li>
         <li>ドラックやその他の既製品を販売している <span class="breadcrumb">breadcrumbs: [3, 61, 103]</span></li>
         <li>ハック、チート、フィッシング、またはその他の悪意のあるリンク <span class="breadcrumb">breadcrumbs: [3, 61, 105]</span></li>
