--- a/aboutcode.html
+++ b/aboutcode.html
@@ -124,8 +124,8 @@ breadcrumbsをコピーしてください
 
     <section class="section">
       <h2>個人を特定できる情報を晒している</h2>
-      <div class="breadcrumb">breadcrumbs: [3, 60, 7]</div>
-      <div class="elements">
+      <div class="breadcrumb">breadcrumbs: [3, 60, 7]
+      <div class="elements">elements
         <ul>
           <li>physical_address //住所または職場の住所</li>
           <li>phone_info //電話番号</li>
@@ -137,6 +137,7 @@ breadcrumbsをコピーしてください
           <li>revenge_porn //プライベート性の高い写真</li>
         </ul>
       </div>
+    </div>
     </section>
 
     <section class="section">
