--- a/aboutcode.html
+++ b/aboutcode.html
@@ -65,7 +65,7 @@ li > ul > li {
 <body>
   <div class="report-container">
     <h1>通報項目番号表 </h1>
-breadcrumbsをコピーしてください
+breadcrumbs、elementsをコピーしてください
     <section class="section">
       <h2>スパム</h2>
       <div class="breadcrumb">breadcrumbs: [3, 79]</div>
@@ -125,16 +125,18 @@ breadcrumbsをコピーしてください
     <section class="section">
       <h2>個人を特定できる情報を晒している</h2>
       <div class="breadcrumb">breadcrumbs: [3, 60, 7]
-      <div class="elements">elements
+      <div class="elements">elements: [
+　　　　個人情報の場合必要
         <ul>
-          <li>physical_address //住所または職場の住所</li>
-          <li>phone_info //電話番号</li>
-          <li>credit_info //クレジットカード情報</li>
-          <li>email_address //メールアドレス</li>
-          <li>legal_name //実名</li>
-          <li>ip_address //IPアドレス</li>
-          <li>face_pic //顔写真</li>
-          <li>revenge_porn //プライベート性の高い写真</li>
+          <li>physical_address </li>
+          <li>phone_info </li>
+          <li>credit_info </li>
+          <li>email_address </li>
+          <li>legal_name </li>
+          <li>ip_address</li>
+          <li>face_pic </li>
+          <li>revenge_porn </li>
+]
         </ul>
       </div>
     </div>
