--- a/aboutcode.html
+++ b/aboutcode.html
@@ -77,6 +77,7 @@ breadcrumbs、elementsをコピーしてください
         <li>私または他人に対する言葉での嫌がらせ <span class="breadcrumb">breadcrumbs: [3, 57, 82]</span></li>
         <li>無礼、卑猥、または攻撃的な言葉遣い <span class="breadcrumb">breadcrumbs: [3, 57, 83]</span></li>
         <li>アイデンティティや弱みを理由としたヘイトを助長している <span class="breadcrumb">breadcrumbs: [3, 57, 86]</span></li>
+        <li>現実世界で暴力を使うと脅している <span class="breadcrumb">breadcrumbs: [3, 57, 70, 96]</span></li>
         <li>
           露骨な表現、残酷なコンテンツ、望んでない性的コンテンツ
           <ul>
